[package]
name = "glorp"
version = "0.8.7"
description = "krunker"
authors = ["slav"]
edition = "2024"

[package.metadata]
js_bundle_version = "0.1.11"

[workspace]
members = ["crates/*"]

# https://doc.rust-lang.org/rustc/codegen-options/index.html
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
debug-assertions = true
strip = "symbols"

[profile.release.package.imgui-glium-renderer]
opt-level = 0

[profile.release.package.glium]
opt-level = 0

[profile.release.package.imgui]
opt-level = 0

[features]
packaged = []
editor-ignore = []

[dependencies]
windows = { version = "0.62", features = [
       "Win32_UI_WindowsAndMessaging",
       "Win32_UI_Input_KeyboardAndMouse",
       "Win32_UI_Shell",
       "Win32_System_Com",
       "Win32_System_Com_StructuredStorage",
       "Win32_System_DataExchange",
       "Win32_System_Diagnostics_Debug",
       "Win32_System_Diagnostics_ToolHelp",
       "Win32_System_LibraryLoader",
       "Win32_System_ProcessStatus",
       "Win32_System_Threading",
       "Win32_System_SystemServices",
       "Win32_System_Memory",
       "Win32_Foundation",
       "Win32_Graphics_Gdi",
       "Win32_Storage_FileSystem",
       "Win32_Security_Authorization",
] }

webview2-com = { version = "0.39.1", default-features = false }
ureq = { version = "3.3.*", features = ["rustls"], default-features = false }
serde = { version = "1.0.*", features = ["derive"], default-features = false }
regex = { version = "1.12.*", features = ["std", "perf", "perf-dfa-full", "unicode-perl"], default-features = false }
semver = "1.0.*"
serde_json = "1.0.*"
discord-rich-presence = "1.1.*"
ping-rs = "0.1.*"
dns-lookup = "3.0.*"
imgui = "0.8.2"
imgui-winit-support = "0.8"
imgui-glium-renderer = "0.8.2"
glium = "0.30.2"


[build-dependencies]
embed-resource = "3.0.*"
toml = "1.1.*"
regex = { version = "1.12.*", features = ["std", "perf", "perf-dfa-full", "unicode-perl"], default-features = false }
